# syms

./: Cargo.toml  README.md
src/: custom.rs  language.rs  main.rs  output.rs  parser.rs  picker.rs  queries.rs  symbol.rs  walker.rs
