[package]
name = "syms"
version = "0.2.2"
edition = "2024"
description = "Fast project-wide symbol search using tree-sitter"
license = "MIT"
repository = "https://github.com/saifulapm/syms"
keywords = ["symbols", "tree-sitter", "code-search", "fzf"]
categories = ["command-line-utilities", "development-tools"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[dependencies]
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-bash = "0.25"
tree-sitter-css = "0.25"
tree-sitter-lua = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
crossbeam-channel = "0.5"
anyhow = "1"
libloading = "0.9.0"
toml = "1.1.0"

[profile.release]
lto = true
strip = true
